# cite

./: .gitmodules  CMakeLists.txt  LICENSE  build.sh  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
src/handlers/: handleAddAction.cpp  handleDeleteAction.cpp  handleListAction.cpp  handlers.h
src/lib/: Citation.cpp  Citation.h  CitationTypes.h  Collection.cpp  Collection.h  CollectionRepository.h  IO.cpp  IO.h  YamlCollectionRepository.cpp  YamlCollectionRepository.h  collection.cpp  collection.h  io.cpp  io.h  toSlug.cpp  toSlug.h
src/models/: Citation.cpp  Citation.h  CitationTypes.h  Collection.cpp  Collection.h
